# NLP-2025-Assignment

./: README.md
Arithmetic Expression/: NLP_HW2_NTHU_114065535.docx  arithmetic.py  main.ipynb
Assignment2/: NLP_HW2_NTHU_114065535.py  pyproject.toml
Assignment2/data/: arith.txt  arithmetic_3digit.csv
Assignment3/: NLP_HW3_NTHU_114065535.docx  NLP_HW3_NTHU_114065535.py  requirements.txt
Assignment4/: NLP_HW4_NTHU_114065535.docx  NLP_HW4_NTHU_114065535.py  false_questions.txt  main.ipynb
Multi-Output Learning/: main.ipynb  pyproject.toml
Retrieval Augmented Generator/: NLP_HW4_NTHU_114065535.json  questions_answers.txt
