[project]
name = "NLP2025Assignment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "datasets>=2.21.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=0.36.0",
    "ipykernel>=6.31.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "numpy>=2.0.2",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wget>=3.2",
]
